# PaperDeck

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .dev.vars  .gitignore  Cargo.toml  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
backend/migrations/: 0001_initial.sql  20251028084735_create_initial_tables.sql
backend/src/: auth.rs  index.ts  main.rs  models.rs  state.rs
backend/src/crawler/: error.rs  mod.rs  parser_usenix.rs
backend/src/lib/: crypto.ts  types.ts
backend/src/middleware/: auth.ts
backend/src/routes/: admin.rs  auth.rs  auth.ts  mod.rs  papers.rs  papers.ts  swagger.rs
backend/test/: auth.test.ts  crypto.test.ts  env.d.ts  papers.test.ts
crawler/: package.json  tsconfig.json
crawler/src/: db.ts  index.ts  parser-jstage.ts  parser-scis.ts  parser-sigmod.ts  parser-usenix.ts
crawler/test/: parser-jstage.test.ts  parser-scis.test.ts  parser-sigmod.test.ts  parser-usenix.test.ts
crawler/test/fixtures/: jstage-sample.html  scis2025-sample.html  scis2026-sample.html  sigmod2024-sample.html  usenix-sample.html
frontend/: .gitignore  index.html  openapitools.json  package.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  api.ts  main.css  main.tsx
frontend/src/auth/: AuthProvider.tsx
frontend/src/components/: AuthForm.css  AuthForm.tsx  AuthLayout.tsx  Button.css  Button.tsx  Card.css  CrawlForm.css  CrawlForm.tsx  Form.css  Form.tsx  FullscreenButton.css  FullscreenButton.tsx  Layout.css  Layout.tsx  LikedPaperCard.css  (+9 more)
(+22 files in other folders)
