[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Webフレームワーク (Axum & Tokio) ---
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# --- データ & データベース ---
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- 認証 & セキュリティ ---
# パスワードハッシュ化
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8" # argon2 のソルト生成用
# JWT (JSON Web Token)
jsonwebtoken = "9"
chrono = "0.4" # JWT の有効期限 (exp) 設定用
once_cell = "1" # グローバルなシークレットキー保持用
# Axum 認証ヘッダー
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"

# --- クローラー機能 ---
reqwest = { version = "0.12", features = ["json"] } # 非同期 HTTP クライアント
scraper = "0.19.0" # HTML パーサー
regex = "1"
url = "2.5.0"

# --- ユーティリティ (ロギング & 設定) ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15" # .envファイル読み込み用

# --- OpenAPI (Swagger) ドキュメント ---
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
